# DroneOpsCommand

./: .deployer-disabled  .env.demo  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  ROADMAP.md  _apply_m2.py  autopull.log.1  autopull.sh  bootstrap.sh  docker-compose.demo-standby.yml  docker-compose.demo.yml  docker-compose.standby.yml  docker-compose.yml  droneops-autopull.service  droneops-autopull.timer  droneops.service  setup-server.sh  update.sh
.github/workflows/: auto-merge-claude.yml  auto-merge-to-main.yml  companion-apk.yml  merge-to-dev.yml  secret-scan.yml  self-hosted-smoke-test.yml
backend/: Dockerfile  requirements-dev.txt  requirements.txt  reset_admin.py  reset_to_setup.py
backend/app/: config.py  database.py  demo_seed.py  main.py  seed.py
backend/tests/: conftest.py  test_client_portal_pay.py  test_customer_response_tos_audit.py  test_customers_router_tos_audit.py  test_ntfy.py  (+23 more)
companion/: .gitignore  BUILD.md  capacitor.config.ts  index.html  package-lock.json  package.json
docs/: TOS-Rebuild.md  cloudflare-tunnel-setup.md  managed-hosting.md  migration-synology-to-ubuntu.md  windows-self-hosting.md
flight-parser/: Cargo.toml  Dockerfile
flight-parser/src/: airdata.rs  dji.rs  litchi.rs  main.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: init-demo-standby.sh  init-primary.sh  init-standby.sh  migrate_maintenance_type_vocab.py  primary-entrypoint.sh  snapshot.sh  verify-deploy.sh
(+189 files in other folders)
