[package]
name = "flight-parser"
version = "1.0.0"
edition = "2021"
description = "DJI/Litchi/Airdata flight log parser microservice for DroneOpsReport"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dji-log-parser = "0.5"
csv = "1.3"
sha2 = "0.10"
hex = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
